syntax = "proto3";

package study.proto;

option go_package = "pb";

import "laptop_message.proto";

// 创建一个请求
message CreatLaptopRequest { Laptop laptop = 1; }

// 创建一个响应
message CreateLaptopReaponse { string id = 1; }

// 创建一个rpc服务
service LaptopService {
  rpc CreatLaptop(CreatLaptopRequest) returns (CreateLaptopReaponse) {}
}